chore: Tercer commit

--- a/public/addAlbum.html
+++ b/public/addAlbum.html
@@ -268,7 +268,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./scripts/addAlbum.js"></script>
+    <script type="module" src="./scripts/addAlbum.js"></script>
 
 </body>
 </html>
