--- a/public/tours.html
+++ b/public/tours.html
@@ -513,7 +513,7 @@
         <img class="w-12 h-12 ms-5 rounded" src="./imagenes/p5logo.jpeg" alt="logo-p5">  
     </div>
 
-    <script src="/scripts/app.js" type="text/javascript"></script>
+    <script type="module" src="/scripts/app.js" type="text/javascript"></script>
    
 </body>
 </html>
