--- a/public/signin.html
+++ b/public/signin.html
@@ -137,6 +137,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./scripts/signin.js"></script>
+    <script type="module" src="./scripts/signin.js"></script>
 </body>
 </html>
