--- a/public/signup.html
+++ b/public/signup.html
@@ -142,7 +142,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./scripts//signup.js"></script>
+    <script type="module" src="./scripts//signup.js"></script>
 
 </body>
 </html>
