--- a/public/signin.html
+++ b/public/signin.html
@@ -100,9 +100,11 @@
 
     <!--FORMULARIO-->
 
+    <!-- <h1 id="nombre-usuario" class="text-white">Hola</h1> -->
+
     <div class="grid h-full place-items-center px-7">
 
-        <div class="w-full mt-24 sm:w-8/12 md:w-6/12 lg:w-5/12 xl:w-4/12 2xl:w-3/12 2xl:px-6 border-1 rounded-3xl border-pink px-5 pt-6 pb-6 sombra">
+        <div class="w-full mt-6 sm:w-8/12 md:w-6/12 lg:w-5/12 xl:w-4/12 2xl:w-3/12 2xl:px-6 border-1 rounded-3xl border-pink px-5 pt-6 pb-6 sombra">
 
             <div class="mb-2">
                 <h1 class="font-bold text-center md:text-start text-3xl md:text-4xl md:text-4xl bg-gradient-to-r from-blue-600 to-violet-300 bg-clip-text text-transparent">Iniciá Sesión.</h1>
