--- a/public/signup.html
+++ b/public/signup.html
@@ -139,6 +139,13 @@
             </form>
 
         </div>
+
+        <!--FOOTER-->
+
+        <div class="flex bg-neutral-900 justify-center items-center p-8 mt-10">         
+            <p class="text-white">Plataforma 5 - Proyecto Agustin Trezza</p>   
+            <img class="w-12 h-12 ms-5 rounded" src="./imagenes/p5logo.jpeg" alt="logo-p5">  
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
