--- a/public/signin.html
+++ b/public/signin.html
@@ -185,31 +185,31 @@
 
     </div>
 
-    <!-- <script>  
+    <script>  
 
         const user = JSON.parse(localStorage.getItem('userInfo'))
-        document.getElementById('container-cerrar-sesion').style.visibility = "hidden";
-        document.getElementById('logo-p5').style.display= 'none';
-        document.getElementById('logo-p5-login').style.display= 'none';
+        // document.getElementById('container-cerrar-sesion').style.visibility = "hidden";
+        // document.getElementById('logo-p5').style.display= 'none';
+        // document.getElementById('logo-p5-login').style.display= 'none';
 
 
 
-        console.log(user)
-        if(user) {
-                console.log('hay usuario')
-                // document.getElementById('logo-p5').style.display= 'block';
-                document.getElementById('logo-p5-login').style.display= 'block';
+        // console.log(user)
+        // if(user) {
+        //         console.log('hay usuario')
+        //         // document.getElementById('logo-p5').style.display= 'block';
+        //         document.getElementById('logo-p5-login').style.display= 'block';
 
-                // document.getElementById('alerta-sesion').style.display = "none"
+        //         // document.getElementById('alerta-sesion').style.display = "none"
 
-                // document.getElementById('container-cerrar-sesion').style.visibility = "visible"
-                document.getElementById('container-cerrar-sesion-login').style.visibility = "visible"
+        //         // document.getElementById('container-cerrar-sesion').style.visibility = "visible"
+        //         document.getElementById('container-cerrar-sesion-login').style.visibility = "visible"
 
-                // document.getElementById('container-sin-sesion').style.display = "none"
-                document.getElementById('container-sin-sesion-login').style.display = "none"
+        //         // document.getElementById('container-sin-sesion').style.display = "none"
+        //         document.getElementById('container-sin-sesion-login').style.display = "none"
 
-                document.getElementById('nombre-usuario').textContent = user.email;
-            } 
+        //         document.getElementById('nombre-usuario').textContent = user.email;
+        //     } 
     
         function cerrarSesion() {
             console.log(user)
@@ -221,7 +221,7 @@
 
         module.exports
 
-    </script> -->
+    </script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
