--- a/public/signin.html
+++ b/public/signin.html
@@ -26,24 +26,45 @@
 
     <!--HEADER MOBILE-->
 
-     <div class="sticky xl:hidden fixed top-0 bg-black w-full p-2 z-10 bg-opacity-75">
+    <div class="sticky xl:hidden fixed top-0 bg-black w-full p-2 z-10 bg-opacity-75">
 
-        <div class="flex justify-end">
-            <h2 class="text-white"></h2>
+        <div class="flex justify-center py-3">
+            <h2 class="text-white font-thin text-2xl">proyecto disco - Agustin Trezza</h2>
             <img class="logo-plataforma5 w-7 h-7 rounded ms-3" src="./imagenes/p5logo.jpeg" alt="logo-p5">
         </div>
     
-        <div class="grid grid-cols-2 w-11/12">
-            <div class="flex items-center justify-center">
-                <img class="invert logo-plataforma5 w-6 h-6 me-2" src="./imagenes/cd.png" alt="logo-p5">
-                <h1 class="text-white text-lg xl:text-base">album</h1>
+        <div class="grid gap-2 grid-cols-2 w-full">
+
+            <div class="flex flex-col justify-center">
+                <a href="index.html" class="flex items-center justify-center mb-2">
+                    <!-- <img class="invert logo-plataforma5 w-7 h-7 me-2" src="./imagenes/cd.png" alt="logo-p5"> -->
+                    <h1 class="text-white text-2xl">album</h1>
+                </a>
+                <a href="signin.html" class="flex items-center justify-center">
+                    <!-- <img class="invert logo-plataforma5 w-7 h-7 me-2" src="./imagenes/icono-add-album.png" alt="add-album-icon"> -->
+                    <h1 class="text-white text-2xl">signin</h1>
+                </a>
             </div>
-            <div class="flex items-center justify-center">
-                <img class="invert logo-plataforma5 w-5 h-5 me-2" src="./imagenes/icono-add-album.png" alt="add-album-icon">
-                <h1 class="text-white text-lg xl:text-base">addAlbum</h1>
+
+            <div class="flex flex-col justify-center">
+                <button class="flex items-center justify-start">
+                    <a class="flex transition-all transition ease-in-out delay-400 duration-300 hover:underline" href="./addAlbum.html">
+                        <div class="flex items-center justify-center">
+                            <h1 class="text-white text-start text-2xl">addAlbum</h1>
+                            <!-- <img class="invert logo-plataforma5 w-7 h-7 ms-2" src="./imagenes/cd.png" alt="logo-p5"> -->
+                        </div>
+                    </a>
+                </button>
+
+                <a class="flex items-center justify-start" href="./signup.html">
+                    <h1 class="text-white text-2xl">signout</h1>
+                    <!-- <img class="invert logo-plataforma5 w-7 h-7 ms-2" src="./imagenes/icono-add-album.png" alt="add-album-icon"> -->
+                </a>
             </div>
+            
         </div>
     </div>
+
 
         <!--HEADER DESKTOP-->
 
@@ -150,10 +171,10 @@
 
     <div class="grid h-full place-items-center px-7">
 
-        <div class="w-full mt-11 sm:w-8/12 md:w-6/12 lg:w-5/12 xl:w-4/12 2xl:w-3/12 2xl:px-6 rounded-3xl px-5 pt-6 pb-6">
+        <div class="mt-11 sm:w-10/12 md:w-10/12 lg:w-10/12 xl:w-4/12 2xl:w-4/12 2xl:px-6 rounded-3xl px-5 pt-6 pb-6">
 
             <div class="mb-2">
-                <h1 class="font-bold text-center md:text-start text-3xl md:text-4xl md:text-5xl bg-gradient-to-r from-blue-600 to-violet-300 bg-clip-text text-transparent">Iniciá Sesión</h1>
+                <h1 class="font-bold text-center md:text-start text-3xl md:text-5xl bg-gradient-to-r from-blue-600 to-violet-300 bg-clip-text text-transparent">Iniciá Sesión</h1>
                 <h1 class="text-slate-300 text-lg text-center md:text-start md:text-2xl font-bold">!Gracias por visitar mi proyecto!</h1>
             </div>
 
@@ -161,10 +182,10 @@
             <form id="formulario-login" method="POST" class="flex flex-col">
 
                 <label class="text-white text-base mt-2" for="email">Email</label>
-                <input id="email" name="email" class="mt-1 bg-neutral-900 rounded-md p-1.5 text-white text-sm h-10 placeholder:text-sm focus-visible:outline-none" id="email" type="email" name="emailUsuario" placeholder="Ingresá una casilla de email" required> 
+                <input id="email" name="email" class="mt-1 bg-neutral-800 rounded-md p-1.5 text-white text-sm h-10 placeholder:text-sm focus-visible:outline-none" id="email" type="email" name="emailUsuario" placeholder="Ingresá una casilla de email" required> 
 
                 <label class="text-white text-base mt-2" for="password" for="">Password</label>
-                <input id="contraseña" name="contraseña" class="mt-1 bg-neutral-900 rounded-md p-1.5 text-white text-sm h-10 placeholder:text-sm focus-visible:outline-none" id="password" type="password" name="claveUsuario" placeholder="Ingresá tu password" required>
+                <input id="contraseña" name="contraseña" class="mt-1 bg-neutral-800 rounded-md p-1.5 text-white text-sm h-10 placeholder:text-sm focus-visible:outline-none" id="password" type="password" name="claveUsuario" placeholder="Ingresá tu password" required>
 
                 <div class="flex justify-center items-center mt-6 mb-2 cursor-pointer">
                     <button type="submit" class="cursor-pointer flex items-center justify-center w-full text-lg text-white bg-gradient-to-r from-blue-700 to-violet-500 p-1 h-10 rounded-full transition ease-in-out delay-25 hover:scale-105">Iniciar Sesión</button>
@@ -175,7 +196,7 @@
                 </div>
 
                 <div class="flex justify-center my-2">
-                    <h3 class="text-white">¿No tenés una cuenta?. Creá una <a class="text-violet-500 hover:text-violet-400 transition ease-in-out delay-25" href="/signup.html"><u>aquí!</u></a></h3>
+                    <h3 class="text-white text-lg">¿No tenés una cuenta?. Creá una <a class="text-violet-500 hover:text-violet-400 transition ease-in-out delay-25" href="/signup.html"><u>aquí!</u></a></h3>
                 </div>
 
             </form>
