--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <!--HEADER MOBILE-->
 
-    <div class="xl:hidden fixed top-0 bg-black w-full p-2 z-10 bg-black lg:bg-opacity-75">
+    <div class="xl:hidden fixed top-0 bg-black w-full p-2 z-10 bg-neutral-800 lg:bg-opacity-75">
 
         <div class="flex justify-center py-1">
             <h2 class="text-white font-thin text-2xl">proyecto disco - Agustin Trezza</h2>
