--- a/public/addAlbum.html
+++ b/public/addAlbum.html
@@ -1,37 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="./styles.css" rel="stylesheet">
-
-    <title>Crear álbum</title>
-    <style>
-        .sombra {
-            border: 1px solid rgb(124, 146, 212);
-            -webkit-box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.75);
-            -moz-box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.75);
-            box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.75);
-            -webkit-box-shadow: 0px 0px 12px -1px rgba(120, 129, 255, 1);
-            -moz-box-shadow: 0px 0px 12px -1px rgb(179, 184, 252);
-            box-shadow: 0px 0px 12px -1px rgba(120, 129, 255, 1);
-        }
-
-        .back {
-            background-color: red !important;
-        }
-    </style>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
-
+    <title>Agregar Álbum - P5 Proyecto Final - Agustin Trezza.</title>
 </head>
 
 <body class="bg-neutral-950 border-box mt-[70px] md:mt-[70px]">
 
     <!-- HEADER -->
-
     <nav class="bg-neutral-950 fixed w-full z-20 top-0 left-0 border-b border-gray-600 dark:border-gray-800">
         <div class=" w-full flex flex-wrap items-center justify-between mx-auto px-4 py-1 md:py-3">
             <a href="https://flowbite.com/" class="flex items-center">
@@ -83,19 +64,19 @@
                 </div>
 
 
-
+            <!-- HEADER REDIRECCIONES -->
             </div>
             <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
                 <ul
                     class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-neutral-950 md:flex-row space-x-3 lg:space-x-8 md:mt-0 md:border-0 md:neutral-950 dark:bg-neutral-950 md:dark:bg-neutral-950 dark:border-gray-700">
                     <li class="bg-neutral-950">
-                        <a href="./index.html"
+                        <a href="./portada.html"
                             class="block py-2 pl-3 pr-4 text-white hover:text-violet-400 rounded md:p-0 md:dark:text-white"
                             aria-current="page">Álbum</a>
                     </li>
                     <li class="bg-neutral-950">
                         <a href="./addAlbum.html"
-                            class="block py-2 pl-3 pr-4 text-violet-500 hover:text-violet-400 rounded hover:bg-gray-100 md:hover:bg-transparent md:p-0 md:dark:hover:text-violet-400 dark:text-violet-500 dark:hover:bg-gray-700 dark:hover:text-violet-500 md:dark:hover:bg-transparent dark:border-gray-700">AddAlbum</a>
+                            class="block py-2 pl-3 pr-4 text-violet-500 text-xl hover:text-violet-400 rounded hover:bg-gray-100 md:hover:bg-transparent md:p-0 md:dark:hover:text-violet-400 dark:text-violet-500 dark:hover:bg-gray-700 dark:hover:text-violet-500 md:dark:hover:bg-transparent dark:border-gray-700">AddAlbum</a>
                     </li>
                     <li class="bg-neutral-950">
                         <a href="./tours.html"
@@ -109,7 +90,12 @@
                     <li class="bg-neutral-950">
                         <a href="./signup.html"
                             class="block py-2 pl-3 pr-4 text-white hover:text-violet-400 rounded hover:bg-gray-100 md:hover:bg-transparent md:p-0 md:dark:hover:text-violet-400 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Crear
-                            sesión</a>
+                            cuenta</a>
+                    </li>
+                    <li class="bg-neutral-950">
+                        <a href="./index.html"
+                            class="block py-2 pl-3 pr-4 text-white hover:text-violet-400 rounded hover:bg-gray-100 md:hover:bg-transparent md:p-0 md:dark:hover:text-violet-400 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
+                            Intro</a>
                     </li>
                 </ul>
             </div>
@@ -124,7 +110,6 @@
     <div>
 
         <!--FORMULARIO DE CREACIÓN DE ALBUMS-->
-
         <div class="grid h-screen place-items-center p-0 md:pd-4">
 
 
@@ -288,8 +273,7 @@
                         </div>
 
 
-                        <!--BOTON DEL FORMULARIO-->
-
+                    <!--BOTON DEL FORMULARIO-->
                         <div class="mt-6">
                             <button type="submit"
                                 class="sombra1 border-violet-500 text-violet-500 hover:text-violet-500 text-lg mt-4  text-center h-10 flex justify-center items-center border-2 rounded-3xl p-1 rounded-full w-full m-auto transition ease-in-out delay-25 hover:scale-105 hover:border-violet-500 cursor-pointer">Crear</button>
@@ -309,8 +293,8 @@
                             nuestros discos y subí el tuyo!</h3>
                     </div>
                     <div>
-                        <!-- Modal ELIMINAR ALBUM -->
 
+                    <!-- MODAL CON FORMULARIO ELIMINAR ALBUM -->
                         <button data-modal-target="staticModal" data-modal-toggle="staticModal"
                             class="text-white mb-2 p-2 bg-red-500 rounded-sm me-4" type="submit">
                             Eliminar Álbums
@@ -322,7 +306,7 @@
 
                 <div class="grid grid-cols-1 md:grid-cols-4" id="display-data"></div>
 
-                <!-- modal -->
+                <!-- MODAL CON FORMULARIO PARA ELIMINAR EL ALBUM -->
                 <div id="staticModal" data-modal-backdrop="static" tabindex="-1" aria-hidden="true"
                     class=" fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
                     <div class="relative w-full max-w-2xl max-h-full">
@@ -379,8 +363,9 @@
         </div>
 
 
-
-
+    
+    <!-- JAVASCRIPT COMPLEMENTARIO DE LA HOJA CON EVENTOS EN LA VISTA Y LA FUNCION PARA CERRAR SESIÓN-->
+    
         <script>
 
             const user = JSON.parse(localStorage.getItem('userInfo'))
